# DjangoProMetric

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
django_prometric/: __init__.py  admin.py  apps.py  checks.py  components.py  conf.py  models.py  permissions.py  routes.py  snapshots.py  urls.py  views.py
django_prometric/locale/fa/LC_MESSAGES/: django.mo  django.po
django_prometric/migrations/: 0001_initial.py  0002_snapshot_windows.py  0003_preferences.py
django_prometric/providers/: __init__.py  arvancloud.py  base.py  capabilities.py  cloudflare.py  periods.py  postgres.py  report.py  sentry.py  types.py
django_prometric/static/django_prometric/: prometric.css  prometric.js
django_prometric/templates/django_prometric/: _comparison.html  _load_error.html  _period.html  base.html  dashboard.html  onboarding.html  provider_detail.html  providers.html  route_detail.html  routes.html  snapshot_compare.html  snapshot_detail.html  snapshots.html
django_prometric/templates/django_prometric/components/: _bars.html  _cumulative.html  _stat_delta.html  audience.html  backend.html  bots.html  cache.html  card.html  country.html  database.html  error.html  indexes.html  insights.html  issues.html  loading.html  network.html  overview.html  performance.html  queries.html  security.html  seo.html  slowest.html  status.html  tables.html  top_routes.html  traffic.html
django_prometric/templates/django_prometric/route/: performance.html  traffic.html
django_prometric/templatetags/: prometric_extras.py
docs/: arvancloud.md  changelog.md  cloudflare.md  configuration.md  custom-providers.md  development.md  getting-started.md  index.md  postgres.md  providers.md  robots.txt  security.md  sentry.md
docs/overrides/: main.html
docs/reference/: provider-api.md
docs/stylesheets/: extra.css
example/: manage.py
example/DjangoProMetric/: asgi.py  settings.py  urls.py  wsgi.py
example/demo/: api.py  urls.py  views.py
tests/: settings.py  test_arvancloud_provider.py  test_postgres_provider.py
