[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-prometric"
description = "Route-aware analytics dashboard for Django: discover your URLs and DRF APIs, and see traffic, performance, and audience metrics for each of them."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Mohsen Salare", email = "mohsensalare@gmail.com" },
]
keywords = [
    "django",
    "analytics",
    "dashboard",
    "cloudflare",
    "monitoring",
    "drf",
    "rest-framework",
    "metrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "Django>=4.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mohsensalare/DjangoProMetric"
Documentation = "https://github.com/mohsensalare/DjangoProMetric/tree/main/docs"
Changelog = "https://github.com/mohsensalare/DjangoProMetric/blob/main/CHANGELOG.md"
Source = "https://github.com/mohsensalare/DjangoProMetric"
Issues = "https://github.com/mohsensalare/DjangoProMetric/issues"
Author = "https://mohsensalare.ir"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "djangorestframework",
    "ruff",
]

[tool.hatch.version]
path = "django_prometric/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["django_prometric"]

[tool.hatch.build.targets.sdist]
include = [
    "/django_prometric",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "DJ"]
ignore = ["E501"]
