[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "django-prometric"
description = "Route-aware analytics dashboard for Django: discover your URLs and DRF APIs, and see traffic, performance, and audience metrics for each of them."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mohsen Salare", email = "mohsensalare@gmail.com" },
]
keywords = [
    "django",
    "analytics",
    "dashboard",
    "cloudflare",
    "monitoring",
    "drf",
    "rest-framework",
    "metrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "Django>=4.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mohsensalare/DjangoProMetric"
Documentation = "https://github.com/mohsensalare/DjangoProMetric/tree/main/docs"
Changelog = "https://github.com/mohsensalare/DjangoProMetric/blob/main/CHANGELOG.md"
Source = "https://github.com/mohsensalare/DjangoProMetric"
Issues = "https://github.com/mohsensalare/DjangoProMetric/issues"
Author = "https://mohsensalare.ir"

[project.optional-dependencies]
# One extra per provider, so a project installs only what its providers need.
# Cloudflare and Sentry run on the standard library alone; their extras are
# intentionally empty so `pip install "django-prometric[sentry]"` works today
# and keeps working if either provider ever grows a real dependency.
cloudflare = []
sentry = []
postgres = [
    "psycopg[binary]>=3.1",
]
full = [
    "django-prometric[cloudflare,postgres,sentry]",
]
dev = [
    "django-prometric[full]",
    "pytest",
    "pytest-django",
    "djangorestframework",
    "ruff",
    "build",
    "twine",
]

[tool.hatch.version]
path = "django_prometric/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["django_prometric"]

[tool.hatch.build.targets.sdist]
include = [
    "/django_prometric",
    "/tests",
    "/docs",
    "/README.md",
    "/RELEASING.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "DJ"]
ignore = ["E501"]
